@@ -1,3 +1,8 @@
+2004-07-31  Richard Hult  <richard@imendio.com>
+
+	* src/planner-gantt-row.c (gantt_row_event): Move declaration to
+	the top.
+
 2004-07-30  Xavier Ordoquy  <xordoquy@linovia.com>
 
 	* python/Makefile.am:
